fix(javafx): start FXCanvas against the host's own JavaFX